fix width on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,12 @@
     list-style: none;
 }
 
+html {
+    min-width: 100%;
+}
+
 body {
-    max-width: 100%;
+    width: 100%;
     background-color: #FCF8FE;
 }
 
@@ -68,7 +72,7 @@ h2 {
 
 
 header {
-    max-width: 100%;
+    width: 100%;
     height: 908px;
     padding: 70px 140px 210px;
 
@@ -173,6 +177,9 @@ header {
     font-weight: 600;
     letter-spacing: 0.34em;
     line-height: 250px;
+    text-align: center;
+
+    width: 100%;
     margin-left: 0.34em;
     color: #FFFFFF;
     text-shadow: 0px 4px 50px rgba(131, 115, 161, 0.6);
@@ -236,7 +243,9 @@ header .social-btns {
 .directions {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    width: 100%;
 
     margin-bottom: 150px;
 
